# CoAgent-Learn

./: .env.example  .env.template  .gitignore  README.md  pyproject.toml  run.py  start-all.bat  start-backend.bat  start-frontend.bat  start.bat
.claude/: launch.json
agents/: graph.py  prompts.py
backend/: Dockerfile  main.py  requirements.txt
backend/core/: base_llm.py  config.py
backend/ui/: avatar.py  chat_input.py  diagnosis.py  mode_select.py  second_window.py  settings.py  sidebar.py  stats_bar.py  theme.py
data/: app.db
data/documents/: 01-大模型基础概念.md  02-Prompt工程.md  03-RAG技术原理.md  04-向量数据库与Embedding.md  05-Agent基础.md  06-Agent记忆系统.md  07-多Agent协同.md
db/: models.py  user_profile.py
deploy/: docker-compose.yml
docs/: 一、地基搭建与模型调用.md  一、工程地基搭建记录.md  三、多智能体系统与展示.md  三、界面搭建——Claude风格三栏Web UI.md  三（0）、具体功能实现总述.md  三（1）、多智能体系统与展示.md  二、框架性逻辑实现.md  二、界面搭建.md  二（0）、MVP基础模块实现.md  二（1）、BaseLLM统一模型封装.md  二（2）、知识库搭建——ai应用教程调研.md  五、全栈改造记录.md  四、SQLite用户画像存储.md  工程地基搭建记录.md  零、项目启动方式.md
docs（已开发内容记录）/: 一、地基搭建与模型调用.md  二、界面搭建.md  零、项目启动方式.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentFlow.tsx  AgentModal.tsx  CenterPanel.tsx  DiagnosisModal.tsx  (+6 more)
rag/: document_loader.py
scripts/: start-server.sh  start.sh  stop.sh
skills/: __init__.py  builtins.py  registry.py
skills/knowledge_retrieval/: __init__.py
skills/memory_ops/: __init__.py
skills/user_diagnosis/: __init__.py
skills/web_search/: __init__.py
tests/: test_base_llm.py
